--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "allure": "^0.0.0",
     "chai": "^4.3.7",
     "cypress": "^12.7.0",
     "cypress-file-upload": "^5.0.8",
@@ -8,7 +9,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@shelex/cypress-allure-plugin": "^2.36.0",
+    "allure-commandline": "^2.21.0",
+    "babel-loader": "^9.1.2",
     "mocha": "^10.2.0",
-    "mochawesome": "^7.1.3"
+    "mochawesome": "^7.1.3",
+    "shebang-loader": "^0.0.1"
   }
 }
